# erpnext_fiscal_br

./: .gitignore  INSTALL_COOLIFY.md  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
erpnext_fiscal_br/: __init__.py  hooks.py  install.py  modules.txt  tasks.py
erpnext_fiscal_br/api/: __init__.py  nfce.py  nfe.py  sefaz.py  setup.py
erpnext_fiscal_br/events/: company.py  customer.py  item.py  sales_invoice.py
erpnext_fiscal_br/fiscal_br/: __init__.py
erpnext_fiscal_br/fiscal_br/doctype/certificado_digital/: __init__.py  certificado_digital.json  certificado_digital.py
erpnext_fiscal_br/fiscal_br/doctype/configuracao_fiscal/: __init__.py  configuracao_fiscal.json  configuracao_fiscal.py
erpnext_fiscal_br/fiscal_br/doctype/evento_fiscal/: __init__.py  evento_fiscal.json  evento_fiscal.py
erpnext_fiscal_br/fiscal_br/doctype/nota_fiscal/: __init__.py  nota_fiscal.js  nota_fiscal.json  nota_fiscal.py
erpnext_fiscal_br/fiscal_br/doctype/nota_fiscal_item/: __init__.py  nota_fiscal_item.json  nota_fiscal_item.py
erpnext_fiscal_br/fiscal_br/report/notas_emitidas/: __init__.py  notas_emitidas.js  notas_emitidas.json  (+1 more)
erpnext_fiscal_br/fixtures/: cfop.json
erpnext_fiscal_br/public/css/: fiscal_br.css
erpnext_fiscal_br/public/js/: company.js  customer.js  fiscal_br.js  item.js  sales_invoice.js  sales_invoice_list.js  sales_order.js
erpnext_fiscal_br/services/: __init__.py  danfe.py  signer.py  transmitter.py  validators.py  xml_builder.py
erpnext_fiscal_br/utils/: __init__.py  cnpj_cpf.py  ibge.py  tax_tables.py
(+2 files in other folders)
