[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext_fiscal_br"
version = "0.0.1"
description = "Módulo Fiscal Brasileiro para ERPNext - NFe/NFCe"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alquimia Industria", email = "contato@alquimiaindustria.com.br"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/brunoobueno/erpnext_fiscal_br"

[tool.setuptools.packages.find]
where = ["."]
include = ["erpnext_fiscal_br*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
